# ui

./: .gitignore  Cargo.toml  abc.ui  elements.rs  hello.html  hello.ui  index.html  main.rs  my_rect.ui  nested.html  nested.ui  parser.rs  setup.js  thing.js  ui.js  web.rs
api/: Cargo.toml
api/all/: Cargo.toml
api/all/src/: lib.rs
api/base/: Cargo.toml
api/base/src/: callback.rs  lib.rs
api/native/: Cargo.toml
api/native/src/: fragment.wgsl  lib.rs  vertex.wgsl
api/src/: lib.rs
api/src/native/: mod.rs
api/src/web/: mod.rs
api/web/: Cargo.toml
api/web/src/: lib.rs  panic_hook.rs  ui.js
app/: app.html  app.ui  main_view.ui  sidebar.ui  sidebar_button.ui
compiler/: Cargo.toml  doc.ui  ui.js
compiler/app/: app.html  app.ui  budget_detail.ui  budget_header.ui  budget_view.ui  main_view.ui  reports_view.ui  sidebar.ui  sidebar_button.ui  tx_view.ui
compiler/button/: button.html  button.js  button.ui
compiler/src/: main.rs
compiler/src/lib/: codegen.rs  elements.rs  mod.rs  native.rs  parser.rs  web.rs
examples/simple/: Cargo.toml  build_web.sh  run_native.sh  simple_web.html
examples/simple/src/: build.rs  lib.rs  main.rs  simple.ui  web.rs
highlight.ui/: package.json
highlight.ui/syntaxes/: ui.tmLanguage.json
ideas/: rust_idea.rs
pkg_web/: Cargo.toml
pkg_web/src/: main.rs
textmate/highlight.ui/syntaxes/: ui.tmLanguage.json
