[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCollection",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Text",
    "console",
]
optional = true

[dependencies]
cfg-if = "1.0.0"
wgpu = { version = "0.12.0", optional = true }
winit = { version = "0.26.1", optional = true }
bytemuck = { version = "1.9.1", features = [ "derive" ], optional = true }
wasm-bindgen = { version = "0.2.80", optional = true }

[features]
native = ["wgpu", "winit", "bytemuck"]
web = ["wasm-bindgen", "web-sys"]


