[package]
name = "simple"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
winit = "^0.26.1"
pollster = "0.2.5"
ui = { path = "../../api", optional = true }
wasm-bindgen = { version = "0.2.80", optional = true }
web-sys = { version = "0.3.4", features = ["Element"], optional = true }

[build-dependencies]
ui_compiler = { path = "../../compiler" }

[[bin]]
name = "simple_native"
path = "src/main.rs"
required-features = ["native"]

[lib]
crate-type = ["cdylib"]
name = "simple_web"
path = "src/web.rs"
required-features = ["web"]

[features]
default = ["web"]
web = ["ui/web", "wasm-bindgen", "web-sys"]
native = ["ui/native"]
