[package]
name = "simple"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
ui = { path = "../../api/all" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.26.1"
pollster = "0.2.5"

[build-dependencies]
ui_compiler = { path = "../../compiler" }

[[bin]]
name = "simple_native"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
name = "simple_web"
path = "src/lib.rs"

